# warcraft-rs

./: .editorconfig  .gitignore  .markdownlint.jsonc  .markdownlint.yaml  .mise.toml  .release-plz.toml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Criterion.toml  LICENSE-APACHE  MIGRATION.md  README.md  SECURITY.md  SYSTEMATIC_DEBUGGING_APPROACH.md  deny.toml  ephemeral-gen.sh  ephemeral-sign.sh  flake.nix  install.ps1  install.sh  mise.toml  qa.sh  rust-toolchain.toml
crates/warcraft-cli-utils/: Cargo.toml  README.md
crates/warcraft-cli-utils/src/: lib.rs  test_debug.rs
ffi/storm-ffi/: Cargo.toml  README.md
ffi/storm-ffi/examples/: basic.c  storm_example.c
ffi/storm-ffi/src/: lib.rs
ffi/storm-ffi/tests/: test_archive_modification.rs  test_ffi_integration.rs
file-formats/archives/wow-mpq/: CHANGELOG.md  Cargo.toml  MODIFICATION_API_DESIGN.md  README.md  SINGLE_ARCHIVE_PARALLEL.md  STATUS.md  STORMLIB_FILE_ADDITION_ANALYSIS.md  WOW_DATA_SETUP.md  benchmark_results.txt  test_stormlib_compat.sh
file-formats/archives/wow-mpq/benches/: archive_creation.rs  archive_extraction.rs  builder.rs  compression.rs  crypto.rs  hash.rs  lazy_loading_test.rs  parallel_processing.rs  phase1_demo.rs  production_performance.rs  simd_performance.rs  single_archive_parallel.rs
file-formats/archives/wow-mpq/examples/: README.md  analyze_attributes.rs  analyze_blizzard_attributes.rs  analyze_v4_header.rs  bulk_modify.rs  cata_patch_chain_demo.rs  check_patch_flags.rs  compare_archives.rs  comprehensive_archive_verification.rs  create_archive.rs  create_archive_with_attributes.rs  create_comparison_archives.rs  create_compressed_tables.rs  create_encrypted_archive.rs  create_test_archive_for_stormlib.rs  create_test_mpq.rs  cross_compatibility_test.rs  debug_archive.rs  debug_attributes.rs  debug_het_bet_creation.rs  debug_v3_archive.rs  full_stormlib_compat_test.rs  generate_test_data.rs  hash_algorithms_demo.rs  list_archive_contents.rs  list_with_names.rs  memory_mapped_performance.rs  modify_archive.rs  modify_stormlib_archive.rs  mop_patch_chain_demo.rs  patch_analysis.rs  patch_chain_dbc_demo.rs  patch_chain_demo.rs  performance_analysis.rs  performance_demo.rs  random_archive_verification.rs  real_wow_test.rs  signature_demo.rs  simd_demo.rs  simple_list.rs  (+28 more)
file-formats/archives/wow-mpq/src/: archive.rs  buffer_pool.rs  builder.rs  compare.rs  debug.rs  error.rs  header.rs  io.rs  lib.rs  modification.rs  parallel.rs  patch_chain.rs  path.rs  rebuild.rs  security.rs  single_archive_parallel.rs
file-formats/archives/wow-mpq/tests/: .gitignore  README.md  buffer_pool_integration.rs  extract_patch_file  extract_patch_file.cpp  lib.rs  patch_integration_test.rs  quick_hash_verification.rs  single_archive_parallel.rs  stormlib_patch_test  stormlib_patch_test.cpp  thread_safety.rs
file-formats/database/wow-cdbc/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
file-formats/database/wow-cdbc/benches/: parse_benchmark.rs  performance_benchmark.rs
file-formats/database/wow-cdbc/examples/: README.md  comprehensive.rs  comprehensive_simple.rs  schema_discovery.rs
file-formats/database/wow-cdbc/src/: dbd.rs  export.rs  header.rs  lazy.rs  lib.rs  mmap.rs  parallel.rs  parser.rs  schema.rs  schema_discovery.rs  schema_loader.rs  stringblock.rs  types.rs  versions.rs  writer.rs
file-formats/database/wow-cdbc/tests/: README.md  compatibility_tests.rs  integration_tests.rs
file-formats/database/wow-dbc/: Cargo.toml  README.md  STATUS.md
file-formats/database/wow-dbc/benches/: parse_benchmark.rs  performance_benchmark.rs
file-formats/database/wow-dbc/examples/: README.md  comprehensive.rs  comprehensive_simple.rs  schema_discovery.rs
file-formats/database/wow-dbc/src/: dbd.rs  error.rs  export.rs  field_parser.rs  lib.rs  mmap.rs  parser.rs  schema.rs  schema_discovery.rs
file-formats/database/wow-dbc/tests/: README.md  compatibility_tests.rs  integration_tests.rs
file-formats/graphics/wow-blp/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
file-formats/graphics/wow-blp/benches/: parser_benchmark.rs
file-formats/graphics/wow-blp/examples/: README.md  load.rs  save.rs
file-formats/graphics/wow-blp/src/: lib.rs  path.rs
file-formats/graphics/wow-blp/tests/: README.md  integration_tests.rs
file-formats/graphics/wow-m2/: CHANGELOG.md  Cargo.toml  README.md  SKINNING_SYSTEM.md  STATUS.md
file-formats/graphics/wow-m2/benches/: parse_bench.rs
file-formats/graphics/wow-m2/docs/: python-rust-parity.md  version-differences.md
file-formats/graphics/wow-m2/examples/: README.md  access_model_data.rs  analyze_embedded_skins.rs  analyze_vanilla_bone_raw.rs  complete_chunks_demo.rs  convert_model.rs  detect_formats.rs  enhanced_parser_demo.rs  extended_file_references.rs  load_model.rs  (+12 more)
file-formats/graphics/wow-wmo/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
file-formats/world-data/wow-adt/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
file-formats/world-data/wow-wdl/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
file-formats/world-data/wow-wdt/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
file-formats/wow-data/: Cargo.toml
file-formats/wow-data-derive/: Cargo.toml
file-formats/wow-data-derive/src/: lib.rs
file-formats/wow-data/src/: error.rs  io_ext.rs  lib.rs  std_impls.rs  types.rs  utils.rs
tools/: M2_VERSION_FINDINGS.md  pyproject.toml
tools/m2/: README.md  batch_test.py  coordinate_systems.py  enhanced_parser.py  parser.py  quaternion.py  test_enhanced_features.py  validation.py
warcraft-rs/: CHANGELOG.md  Cargo.toml  README.md  STATUS.md
warcraft-rs/examples/: README.md  tree_visualization_demo.rs
warcraft-rs/src/: cli.rs  lib.rs  main.rs
warcraft-rs/src/commands/: adt.rs  blp.rs  dbc.rs  dbd.rs  m2.rs  mod.rs  mpq.rs  wdl.rs  wdt.rs  wmo.rs
warcraft-rs/src/database/: connection.rs  import.rs  lookup.rs  mod.rs  models.rs  schema.rs
warcraft-rs/src/utils/: format.rs  io.rs  mod.rs  progress.rs  table.rs  tree.rs
warcraft-rs/tests/: cli_extraction.rs  integration_extraction.rs
(+508 files in other folders)
