[project]
name = "warcraft-file-tools"
version = "0.1.0"
description = "Python tools for analyzing World of Warcraft file formats"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "pyright>=1.1.338",
    "pytest>=7.4.3",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["m2"]
exclude = ["**/__pycache__"]
defineConstant = { DEBUG = true }
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"
executionEnvironments = [
  { root = "." }
]

[dependency-groups]
dev = [
    "click>=8.2.1",
    "numpy>=2.3.2",
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "ruff>=0.12.11",
]
