[package]
name = "warcraft-cli-utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Shared utilities for warcraft-rs command-line tools"
categories = ["command-line-utilities", "game-development"]
keywords = ["cli", "utilities", "warcraft", "wow"]

[dependencies]
# Progress and formatting
indicatif = "0.17"
prettytable-rs = "0.10"

# Error handling
anyhow = "1.0"

# CLI helpers
clap = { version = "4.5", features = ["derive"] }

# Logging
log = { workspace = true }

# Formatting
humansize = "2.1"
chrono = "0.4"

# Path handling
glob = "0.3"