[package]
name = "wow-mpq"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Parser for World of Warcraft MPQ archive files (1.12-5.4)"
categories = ["game-development", "parser-implementations"]
keywords = ["wow", "warcraft", "mpq", "archive", "gamedev"]

[dependencies]
# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Hashing and cryptography
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1.4"
adler = "1.0"
rsa = "0.9"
num-bigint = "0.4"
num-traits = "0.2"

# Compression algorithms
flate2 = "1.1"
bzip2 = "0.6"
lzma-rs = "0.3"
pklib = "0.1"
implode = "0.1.1"

# Data structures and utilities
bytes = "1.10"
rand = { workspace = true }
tempfile = { workspace = true }

# Parallel processing
rayon = "1.10"


[dev-dependencies]
criterion = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "builder"
harness = false

[[bench]]
name = "archive_creation"
harness = false

[[bench]]
name = "archive_extraction"
harness = false

[[bench]]
name = "parallel_processing"
harness = false

[[bench]]
name = "single_archive_parallel"
harness = false

[features]
default = []

# Utilities for testing and examples with WoW game data
test-utils = []

# Enable all features for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "analyze_attributes"

[[example]]
name = "bulk_modify"

[[example]]
name = "compare_archives"

[[example]]
name = "create_archive"

[[example]]
name = "create_test_mpq"

[[example]]
name = "cross_compatibility_test"

[[example]]
name = "debug_archive"

[[example]]
name = "full_stormlib_compat_test"

[[example]]
name = "hash_algorithms_demo"

[[example]]
name = "list_archive_contents"

[[example]]
name = "modify_archive"

[[example]]
name = "patch_analysis"

[[example]]
name = "signature_demo"

[[example]]
name = "simple_list"

[[example]]
name = "verify_wow_files"
required-features = ["test-utils"]

[[example]]
name = "wow_patch_chains"
required-features = ["test-utils"]
