[package]
name = "wow-blp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-blp"
description = "Parser for World of Warcraft BLP (texture) files"
readme = "README.md"
keywords = ["wow", "warcraft", "blp", "texture", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]

[features]
default = []
