[package]
name = "wow-m2"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-m2"
description = "Parser, validator, and converter for World of Warcraft M2 model files with animation support"
readme = "README.md"
keywords = ["wow", "warcraft", "m2", "models", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
wow-utils = { path = "../../../wow-utils" }
wow-data = { path = "../../wow-data" }
wow-data-derive = { path = "../../wow-data-derive" }
byteorder = { workspace = true }
custom_debug = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
memchr = { workspace = true }
bitflags = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
wow-blp = { path = "../wow-blp" }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
rstest = { workspace = true }

[features]
default = []
serde-support = ["serde", "glam/serde"]
trimmed-debug-output = ["wow-utils/trimmed-debug-output"]

