[package]
name = "wow-wmo"
version = "0.6.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Parser, editor, and converter for World of Warcraft WMO (World Model Object) files"
categories = ["game-development", "parser-implementations"]
keywords = ["wow", "warcraft", "wmo", "parser", "gamedev"]

[[bin]]
name = "debug_chunks"
path = "src/bin/debug_chunks.rs"

[dependencies]
# Binary parsing
binrw = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Data structures
bitflags = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
test-case = "3.3"

[[bench]]
name = "parser_benchmarks"
harness = false
