[package]
name = "wow-adt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-adt"
description = "Parser for World of Warcraft ADT (terrain) files"
readme = "README.md"
keywords = ["wow", "warcraft", "adt", "terrain", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
thiserror = "2.0"

[dev-dependencies]

[features]
default = []
