[package]
name = "wow-wdt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wow-wdt"
description = "Parser for World of Warcraft WDT (map) files"
readme = "README.md"
keywords = ["wow", "warcraft", "wdt", "maps", "gamedev"]
categories = ["game-development", "parser-implementations"]

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]

[features]
default = []
